[package]
name = "cumulus-client-collator"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Axia dependencies
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-node-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-overseer = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-node-subsystem = { git = "https://github.com/axtend/axia", branch = "axia" }

# Cumulus dependencies
cumulus-client-network = { path = "../network" }
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.10.2"
tracing = "0.1.25"

[dev-dependencies]
# Axia dependencies
axia-node-subsystem-test-helpers = { git = "https://github.com/axtend/axia", branch = "axia" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../../test/runtime" }
cumulus-test-client = { path = "../../test/client" }

# Substrate dependencies
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-tracing = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-maybe-compressed-blob = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Other dependencies
async-trait = "0.1.42"
