[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Axia Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
# Axlib deps
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Axia deps
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-node-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

# other deps
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.31"
parking_lot = "0.12.0"
derive_more = "0.99.2"
async-trait = "0.1.52"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-local = { path = "../relay-chain-local" }

# Axia deps
axia-test-client = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-client = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

# axlib deps
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-test-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
