[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
# Axlib deps
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Axia deps
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-node-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "axia" }

cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

# other deps
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.31"
parking_lot = "0.12.0"
derive_more = "0.99.2"
async-trait = "0.1.52"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-local = { path = "../relay-chain-local" }

# Axia deps
axia-test-client = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-client = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-service = { git = "https://github.com/axtend/axia", branch = "axia" }

# axlib deps
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
axlib-test-utils = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib" }
