[package]
name = "cumulus-client-pov-recovery"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
# Substrate deps
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-maybe-compressed-blob = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Axia deps
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-node-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-overseer = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-node-subsystem = { git = "https://github.com/axtend/axia", branch = "axia" }

# Cumulus deps
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = {path = "../relay-chain-interface"}

# other deps
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.31"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }

# substrate deps
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
substrate-test-utils = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib" }
