[package]
authors = ["Axia Technologies <admin@axia.io>"]
name = "cumulus-relay-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
axia-overseer = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

cumulus-primitives-core = { path = "../../primitives/core" }

sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

futures = "0.3.1"
parking_lot = "0.12.0"
derive_more = "0.99.2"
async-trait = "0.1.52"
thiserror = "1.0.30"
