[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
axia-overseer = { git = "https://github.com/axtend/axia", branch = "axia" }

cumulus-primitives-core = { path = "../../primitives/core" }

sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib" }

futures = "0.3.1"
parking_lot = "0.12.0"
derive_more = "0.99.2"
async-trait = "0.1.52"
thiserror = "1.0.30"
