[package]
authors = ["Axia Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-local"
version = "0.1.0"
edition = "2021"

[dependencies]
axia-client = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

parking_lot = "0.12.0"
tracing = "0.1.31"
async-trait = "0.1.52"
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"

[dev-dependencies]
# Cumulus deps
cumulus-test-service = { path = "../../test/service" }

# Axia deps
axia-test-client = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

# axlib deps
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
