[package]
authors = ["Anonymous"]
description = "Simple staking pallet with a fixed stake."
edition = "2021"
homepage = "https://axlib.io"
license = "Apache-2.0"
name = "pallet-collator-selection"
readme = "README.md"
repository = "https://github.com/paritytech/cumulus/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.0", default-features = false }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.3.0" }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", default-features = false }

sp-std = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-staking = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-support = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-system = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-authorship = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-session = { default-features = false, git = "https://github.com/axtend/axlib", branch = "c92f69d" }

frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[dev-dependencies]
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus-aura = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-aura = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"rand/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-authorship/std",
	"pallet-session/std",
]

try-runtime = [ "frame-support/try-runtime" ]
