[package]
name = "cumulus-pallet-xcmp-queue"
version = "0.1.0"
authors = ["Axia Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ], default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Axlib Dependencies
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# Axia Dependencies
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm-executor = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }

# Cumulus Dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
cumulus-pallet-allychain-system = { path = "../allychain-system" }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-executor/std",
]
