[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[[bin]]
name = "parachain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = [
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = ["parachain-template-runtime/try-runtime"]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
parachain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
try-runtime-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

substrate-frame-rpc-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
substrate-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", features = ["wasmtime"], branch = "c92f69d" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus-aura = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Cumulus dependencies
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-collator = { path = "../../client/collator" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface" }
cumulus-relay-chain-local = { path = "../../client/relay-chain-local" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
polkadot-parachain = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
polkadot-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
polkadot-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
