[package]
name = "allychains-common"
version = "1.0.0"
authors = ["Axia Technologies <admin@parity.io>"]
edition = "2021"
description = "Logic which is common to all allychain runtimes"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# Axlib dependencies
sp-consensus-aura = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-executive = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-assets = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

# Axia dependencies
polkadot-runtime-common = { git = "https://github.com/axtend/axia", default-features = false , branch = "66cb46b" }
polkadot-primitives = { git = "https://github.com/axtend/axia", default-features = false , branch = "66cb46b" }
xcm = { git = "https://github.com/axtend/axia", default-features = false , branch = "66cb46b" }
xcm-executor = { git = "https://github.com/axtend/axia", default-features = false , branch = "66cb46b" }

# Local dependencies
pallet-collator-selection = { path = "../../pallets/collator-selection", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-authorship = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-consensus-aura/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-asset-tx-payment/std",
	"pallet-collator-selection/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"polkadot-runtime-common/std",
	"polkadot-primitives/std",
]
