[package]
name = "betanet-allychain-runtime"
version = "0.1.0"
authors = ["Axia Technologies <admin@parity.io>"]
edition = "2021"
description = "Simple runtime used by the betanet allychain(s)"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
allychain-info = { path = "../pallets/allychain-info", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }

# Axlib dependencies
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-consensus-aura = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-assets = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-aura = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

allychains-common = { path = "../allychains-common", default-features = false }

# Cumulus dependencies
cumulus-pallet-aura-ext = { path = "../../pallets/aura-ext", default-features = false }
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../pallets/xcmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }
cumulus-ping = { path = "../pallets/ping", default-features = false }

# Axia dependencies
polkadot-allychain = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm-builder = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm-executor = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
pallet-xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-xcm/std",
	"allychain-info/std",
	"allychains-common/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-ping/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
]
