[package]
name = "shell-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
parachain-info = { path = "../pallets/parachain-info", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# try-runtime stuff.
frame-try-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false, optional = true }

# Cumulus dependencies
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm-builder = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }
xcm-executor = { git = "https://github.com/axtend/axia", default-features = false, branch = "66cb46b" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"parachain-info/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
]
