[package]
name = "cumulus-primitives-allychain-inherent"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", optional = true , branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", optional = true , branch = "axlib" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-state-machine = { git = "https://github.com/axtend/axlib", optional = true , branch = "axlib" }
sp-trie = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", optional = true , branch = "axlib" }
sp-storage = { git = "https://github.com/axtend/axlib", optional = true , branch = "axlib" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../core", default-features = false }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder", optional = true }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface", optional = true }

# Other dependencies
async-trait = { version = "0.1.42", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1.31", optional = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"cumulus-primitives-core/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-trie/std",
	"sp-std/std",
	"sp-state-machine",
	"tracing",
	"sp-runtime",
	"sc-client-api",
	"sp-api",
	"sp-storage",
	"cumulus-test-relay-sproof-builder",
	"cumulus-relay-chain-interface",
	"cumulus-test-relay-sproof-builder"
]
