[package]
name = "cumulus-primitives-timestamp"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"
description = "Provides timestamp related functionality for allychains."

[dependencies]
# Axlib dependencies
sp-timestamp = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../core", default-features = false }

[dev-dependencies]
# Axlib dependencies
sp-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Cumulus dependencies
cumulus-test-client = { path = "../../test/client" }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }
futures = "0.3.5"

[features]
default = [ "std" ]
std = [
	"sp-timestamp/std",
	"sp-inherents/std",
	"sp-std/std",
	"cumulus-primitives-core/std",
]
